kubernetes/clusters/cluster-104/kube-state-metrics/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: kube-state-metrics
  namespace: observer
  labels:
    app.kubernetes.io/name: kube-state-metrics
    app.kubernetes.io/part-of: cluster-104
spec:
  type: ClusterIP
  ipFamilyPolicy: PreferDualStack
  ipFamilies:
    - IPv6
    - IPv4
  selector:
    app.kubernetes.io/name: kube-state-metrics
  ports:
    - name: http
      port: 8080
      targetPort: http
      protocol: TCP
